Set scrollbar to be fixed.

--- a/index.scss
+++ b/index.scss
@@ -63,15 +63,12 @@ canvas {
     }
 
     .scrollbar {
-        position: absolute;
         left: 0;
         bottom: 2.5vw;
         width: 100vw;
         height: 5vh;
 
-        display: flex;
         flex-direction: row;
-        justify-content: center;
         
         .indicators {
             padding: 0.5rem 1rem;
@@ -88,15 +85,12 @@ canvas {
 // desktop only styles
 @media only screen and (min-width: 768px) {
     .scrollbar {
-        position: absolute;
         top: 0;
         left: 2.5vw;
         height: 100vh;
         width: 5vw;
 
-        display: flex;
         flex-direction: column;
-        justify-content: center;
         
         .indicators {
             padding: 2rem 0.5rem;
@@ -108,7 +102,11 @@ canvas {
 }
 
 .scrollbar {
+    position: fixed;
     z-index: 100;
+
+    display: flex;
+    justify-content: center;
 
     .indicators {
         background-color: #3737371F;
